--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import-normalize;
+
+:-webkit-autofill,
+:-webkit-autofill:hover,
+:-webkit-autofill:focus,
+:-webkit-autofill:active {
+  -webkit-transition-delay: 99999s;
+}
